2007-09-21  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/language-support-cpp-java/cpp-java-assist.c:
	(cpp_java_assist_get_calltip_context), (on_editor_char_added):
	Increased matching brace search to 500 chars.

2007-09-21  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/cpp-java-assist.c:
	(cpp_java_assist_get_pre_word),
	(cpp_java_assist_get_calltip_context), (cpp_java_assist_check):
	
	Added some profiling debug code
	
	* plugins/language-support-cpp-java/cpp-java-utils.c:
	(cpp_java_util_jump_to_matching_brace):
	* plugins/language-support-cpp-java/cpp-java-utils.h:
	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base), (get_line_auto_indentation):
	
	Add the possiblity to pass a limit to cpp_java_util_jump_matching_brace to
	avoid looping over the whole file when using calltips which is too slow and
	unneeded.
	
	* plugins/sourceview/assist-tip.c: (assist_tip_init),
	(assist_tip_set_tips), (assist_tip_get_coordinates),
	(assist_tip_new):
	* plugins/sourceview/sourceview.c: (iassist_show_tips):
	
	Better calltips appearance (use theme now) and avoid jumping
	calltips

2007-09-21  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/document-manager/plugin.c:
	(update_editor_ui_interface_items):
	* plugins/language-support-cpp-java/plugin.c: (install_support),
	(uninstall_support): Moved autocomplete ui update code from
	document-manager to language-plugin.

2007-09-21  Johannes Schmid <jhs@gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	
	Added IAnjutaLanguage interface (might still change...) for
	the upcoming language-manager plugin.
	
	* plugins/file-manager/Makefile.am:
	* plugins/file-manager/file-model.c:
	(file_model_cancel_expand_idle), (file_model_add_dummy),
	(file_model_expand_idle), (file_model_sort),
	(file_model_row_expanded), (file_model_row_collapsed),
	(file_model_init), (file_model_finalize),
	(file_model_set_property), (file_model_get_property),